--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "test": "vitest",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "ts:check": "tsc --noEmit"
@@ -19,6 +20,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^9.0.7",
     "jspdf": "^3.0.3",
+    "lucide-react": "^0.552.0",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +46,11 @@
     "prettier": "^3.1.1",
     "tailwindcss": "^3.2.6",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^7.2.1"
+  ,
+    "vitest": "^1.3.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "jsdom": "^22.1.0"
   }
 }
