--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "vitest",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "ts:check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
@@ -42,12 +43,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.21",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.2.6",
     "typescript": "^5.2.2",
-    "vite": "^7.2.1"
-  ,
+    "vite": "^7.2.1",
     "vitest": "^1.3.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^6.0.0",
